# ChessEngine

./: CMakeLists.txt  TurnHandler.h  Utils.h
Gambit/: Board.cpp  Board.h  CMakeLists.txt  Chess.xlsx  ColorEnum.cpp  Display.cpp  Display.h  Enums.cpp  Enums.h  FileIO.cpp  FileIO.h  GameHandler.cpp  GameHandler.h  Main.cpp  Movement.cpp  Movement.h  PieceEnum.cpp  Pieces.txt  Placement.cpp  Placement.h  TurnHandler.cpp  TurnHandler.h  Utils.cpp  Utils.h  board.cpp  board.h  colorEnum.cpp  display.cpp  display.h  enums.h  fileIO.cpp  fileIO.h  gameHandler.cpp  gameHandler.h  main.cpp  movement.cpp  movement.h  pieceEnum.cpp  placement.cpp  placement.h  (+4 more)
Gambit/M42/: m42.cpp  m42.h
Gambit/TermColor/: termcolor.hpp
